2008-11-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-events.c (group_free, group_update): Rename field to
	  text_domain.
	  (load_notification_groups): Use symbolic names for key file keys.
	* src/notification-groups.conf: Use new key names.

2008-10-31  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/compat:
	* debian/conffiles:
	* debian/control:
	* debian/rules: Fix lintian warnings.

2008-10-31  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update changelog for 0.1.3 release.

2008-10-31  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Release 0.1.3

	* debian/control: Update requirements.

2008-10-30  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update for 0.1.3 release.

	* debian/control: Update libhildondesktop1-dev requirement.

	* src/hildon-home.c (main): Use the new simplified HDConfigFile API.

2008-10-29  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Update version to 0.1.3. Require libhildondesktop
	2.1.6.

	* src/hildon-home.c (main): Do not unref HDConfigFile instances.

2008-10-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_new): Replace
	dashes with slashes in the ID.

2008-10-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-shortcut.c:
	* src/hd-bookmark-shortcut.h: Add basic Bookmark Shortcut
	implementation.

	* src/hd-shortcuts.c: Add support for bookmark shortcuts.

	* src/Makefile.am: Add new files.

2008-10-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-events.c (group_free): Free translation domain.
	  (group_update): Use dgettext() and translation domain instead of
	  gettext().
	  (load_notification_groups): Load the optional translation domain
	  value (Translation-Domain).

	* src/hd-task-shortcut.c (hd_task_shortcut_load_from_file): Load the
	optional translation domain value and use dgettext() instead of
	gettext().
