@@ -1,5 +1,0 @@
-/etc/init.d/hildon-home
-/etc/hildon-desktop/home.conf
-/etc/hildon-desktop/home.plugins
-/etc/hildon-desktop/notification.conf
-/etc/hildon-desktop/notification-groups.conf
