@@ -1,128 +1,5 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
+include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/autotools.mk
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
-
-# These are used for cross-compiling and for saving the configure script
-# from having to guess our platform (since we know it already)
-DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-
-
-CFLAGS = -Wall -g
-
-# Use soft-float and thumb mode if it enabled.
-ifneq (,$(findstring thumb,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -mthumb -fPIC
-endif
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
-ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-	INSTALL_PROGRAM += -s
-endif
-
-ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -ggdb -DDEBUG
-endif
-
-config.status: configure
-	dh_testdir
-# Add here commands to configure the package.
-	CFLAGS="$(CFLAGS)" ./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --sysconfdir=/etc --disable-dependency-tracking
-
-
-build: build-stamp
-build-stamp:  config.status
-	dh_testdir
-
-# Add here commands to compile the package.
-	$(MAKE) LAUNCHER_CFLAGS="$(LAUNCHER_CFLAGS)" LAUNCHER_LDFLAGS="$(LAUNCHER_LDFLAGS)"
-	touch build-stamp
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp 
-
-# Add here commands to clean up after the build process.
-	-$(MAKE) distclean
-	[ ! -f Makefile ] || $(MAKE) distclean
-ifneq "$(wildcard /usr/share/misc/config.sub)" ""
-	cp -f /usr/share/misc/config.sub config.sub
-endif
-ifneq "$(wildcard /usr/share/misc/config.guess)" ""
-	cp -f /usr/share/misc/config.guess config.guess
-endif
-
-
-	dh_clean 
-
-install: build
-	dh_testdir
-	dh_testroot
-#	dh_clean -k 
-	dh_installdirs
-
-# Add here commands to install the package into debian/build
-	$(MAKE) install DESTDIR=$(CURDIR)/debian/build
-	install -m644 -d $(CURDIR)/debian/build/etc/init.d/
-	install -m644 $(CURDIR)/debian/hildon-home.init $(CURDIR)/debian/build/etc/init.d/	
-
-ifeq "$(strip $(LAUNCHER))" "yes"
-	mv debian/build/usr/bin/hildon-home debian/build/usr/bin/hildon-home.launch
-	ln -s maemo-invoker debian/build/usr/bin/hildon-home
-endif
-
-configure: configure-stamp
-
-configure-stamp:
-	dh_testdir
-	./autogen.sh
-	touch configure-stamp
-
-# Build architecture-independent files here.
-binary-indep: build install
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs 
-#	dh_installexamples
-	dh_installdocs
-	dh_install --sourcedir=debian/build  -v
-#	dh_installmenu
-#	dh_installdebconf	
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-#	dh_installcron
-#	dh_installinfo
-#	dh_installman
-	dh_link
-	dh_strip --dbg-package="hildon-home"
-	dh_compress
-	dh_fixperms
-	dh_installinit --no-start -- start 51 2 3 4 . stop 20 0 1 5 6 .
-#	dh_perl
-#	dh_python
-	dh_makeshlibs -V
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol -- $(LAUNCHER_DEPENDS)
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install 
-
+DEB_DH_INSTALLINIT_ARGS := --no-start -- start 51 2 3 4 . stop 20 0 1 5 6 .
