@@ -1,3 +1,13 @@
+2008-11-04  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* debian/hildon-home.init: Fix su usage in scratchbox.
+
+	* debian/control:
+	* debian/hildon-home.install:
+	* debian/rules: Use cdbs.
+
+	* debian/conffiles (deleted): Remove (lintian).
+
 2008-11-03  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/hd-incoming-events.c (group_free, group_update): Rename field to
